--- a/internal/db/sqlc.yaml
+++ b/internal/db/sqlc.yaml
@@ -1,9 +1,9 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "querys/tags_query.sql"
-    schema: "migrations/tags/000002_create_tags_table.up.sql"
+    queries: "querys/events_query.sql"
+    schema: "migrations/000003_init_events.up.sql"
     gen:
       go:
-        package: "tags"
-        out: "tags"
+        package: "events"
+        out: "events"
